# pixelpal

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: build-release.yml  tests.yml
chars/cat/: config.json
chars/fox/: config.json
chars/owl/: config.json
chars/turtle/: config.json
docs/: CHARS.md  MOOD_SYSTEM.md
packaging/: docker-compose.mac.yml  docker-compose.windows.yml  docker-compose.yml
packaging/debian/DEBIAN/: control
packaging/pyinstaller/: linux.spec  macos.spec  windows.spec
pixelpal/: __init__.py  main.py
pixelpal/charpack/: installer.py  loader.py  schema.py
pixelpal/core/: config_store.py  context_menu.py  drag.py  overlay_window.py
pixelpal/features/: activity_tracker.py  banner_widget.py  chat_window.py  ollama_chat.py  reminder_dialog.py  reminders.py
pixelpal/mood/: audio_level.py  state_machine.py
pixelpal/mood/signals/: base.py  battery_signal.py  cpu_signal.py  git_watch_signal.py  idle_time_signal.py
pixelpal/multipet/: glance_behavior.py  registry.py
pixelpal/rendering/: body_layer.py  ear_layer.py  expression_layer.py  eye_layer.py  head_tilt.py
pixelpal/utils/: geometry.py  platform_utils.py
tests/: test_charpack_schema.py  test_config_store.py  test_geometry.py  test_mood_state_machine.py
tools/: eye_picker.html  find_eye_coords.py  generate_placeholder_art.py  make_gif.py
